[PLG_GROUPS_COLLECTIONS] Ensure collections inherit tab access level and try to line wrap long links

--- a/plugins/groups/collections/collections.css
+++ b/plugins/groups/collections/collections.css
@@ -686,6 +686,9 @@
 		margin: 0;
 		position: relative;
 	}
+	.file-list li a {
+		word-wrap: break-word;
+	}
 	.file-list li:before {
 		display: block;
 		position: absolute;
@@ -793,6 +796,8 @@
 	}
 	#hubForm .item-asset .delete:before {
 		margin-right: 1em;
+		content: "\f014";
+		font-family: "Fontcons";
 	}
 	#hubForm .file-add {
 		margin: 1em 0 2em 0;
